hphp/hack/test/typecheck/expression_trees/static_static_method_call.php.exp
File "static_static_method_call.php", line 11, characters 22-32:
Static method calls in expression trees require explicit class names. (Parsing[1002])
